objects/SalesOrder__c.object
<CustomObject>
    <fields>
        <fullName>AmountOfContractNEQTotalAmount__c</fullName>
        <formula>AmountOfContract__c  &lt;&gt;  TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約金額≠合計金額</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmountOfContract__c</fullName>
        <label>契約金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnalysisSample__c</fullName>
        <label>分析試料分類</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalDateFormula__c</fullName>
        <formula>Datevalue(ApprovalDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>分析結果の承認日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <label>分析結果の承認日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>地域</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantCode__c</fullName>
        <label>アシスタントコード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantLkup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>アシスタント</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesOrder_Assistant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant__c</fullName>
        <label>アシスタント</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Att__c</fullName>
        <label>ATT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <label>請求書</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingMonthWillBe__c</fullName>
        <label>請求予定月</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingSystem__c</fullName>
        <label>請求方式</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchNo__c</fullName>
        <formula>Quote__r.BranchNo__c</formula>
        <label>見積枝番</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarryDeliveryTimeFormula__c</fullName>
        <formula>Datevalue(CarryDeliveryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>搬入納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CarryDeliveryTime__c</fullName>
        <label>搬入納期（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChangedSalesAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>変更後販売先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>販売オーダ (変更後販売先取引先)</relationshipLabel>
        <relationshipName>SalesOrder_ChangedSalesAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommissionOrderAmount__c</fullName>
        <label>受注金額(口銭)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CompanyUnit__c</fullName>
        <label>企業単位</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmedOrderDateFormula__c</fullName>
        <formula>Datevalue(ConfirmedOrderDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConfirmedOrderDate__c</fullName>
        <label>受注日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConsumptionTax__c</fullName>
        <label>受注総額(消費税抜)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContactDateFormula__c</fullName>
        <formula>Datevalue(ContactDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactDate__c</fullName>
        <label>契約日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContactDeliveryTimeFormula__c</fullName>
        <formula>Datevalue(ContactDeliveryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactDeliveryTime__c</fullName>
        <label>契約納期（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContractDivision__c</fullName>
        <label>契約区分</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractModel__c</fullName>
        <label>契約対象機種</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPerson__c</fullName>
        <label>契約担当者</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStopDateFormula__c</fullName>
        <formula>Datevalue(ContractStopDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約中止日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStopDate__c</fullName>
        <label>契約中止日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContractStopReason__c</fullName>
        <label>契約中止理由</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractsDivision__c</fullName>
        <label>受注契約区分</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerOrder__c</fullName>
        <label>顧客オーダ</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryConditionsCode__c</fullName>
        <label>受渡条件コード</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryConditions__c</fullName>
        <label>受渡条件</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountAmountTakeOff__c</fullName>
        <label>値引額(対引取価格)</label>
        <summarizedField>SalesOrderLine__c.DiscountAmount__c</summarizedField>
        <summaryFilterItems>
            <field>SalesOrderLine__c.Effective__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>SalesOrderLine__c.SalesOrderLink__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <label>定価値引額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountRate__c</fullName>
        <label>定価値引率</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EfOrderAmount__c</fullName>
        <label>受注金額(EF)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <formula>TEXT(SalesPipelineLink__r.Field37__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IE機種</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>受注予実</label>
        <referenceTo>Sales_Plan_Result__c</referenceTo>
        <relationshipLabel>販売オーダ</relationshipLabel>
        <relationshipName>SalesOrderAC9f</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>LEN (FlagshipProductCode__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注代表商品コード桁数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FixedSegment__c</fullName>
        <label>確定セグメント名</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlagshipProductCode__c</fullName>
        <label>受注代表商品コード</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlagshipProduct__c</fullName>
        <label>受注代表商品名</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForwardingPlace__c</fullName>
        <label>仕向地</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightOrderAmount__c</fullName>
        <label>受注金額(フレート)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>納品書</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemName__c</fullName>
        <formula>UnitBodyLink__r.ItemLink__r.JapaneseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>装置名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KakuteiOrderDateFormula__c</fullName>
        <formula>Datevalue(KakuteiOrderDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>確定注文日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KakuteiOrderDate__c</fullName>
        <label>確定注文日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Kikaku__c</fullName>
        <formula>UnitBodyLink__r.Standard__c</formula>
        <label>規格</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kosohin__c</fullName>
        <label>後送品</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseEndDateFormula__c</fullName>
        <formula>Datevalue(LeaseEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>リース終了予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseEndDate__c</fullName>
        <label>リース終了予定日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeaseStartDateFormula__c</fullName>
        <formula>Datevalue(LeaseStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>リース開始予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseStartDate__c</fullName>
        <label>リース開始予定日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractManagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>保守契約管理</label>
        <referenceTo>MaintenanceContractManagement__c</referenceTo>
        <relationshipLabel>販売オーダ</relationshipLabel>
        <relationshipName>SalesOrder_MaintenancePL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaintenanceContract__c</fullName>
        <label>保守契約</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceEndDateFormula__c</fullName>
        <formula>Datevalue(MaintenanceEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaintenanceEndDate__c</fullName>
        <label>保守契約終了日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MaintenancePeriodText__c</fullName>
        <formula>TRIM(SUBSTITUTE(TEXT(MaintenanceStartDateFormula__c), &apos;-&apos;, &apos;/&apos;) &amp; &apos; - &apos; &amp; SUBSTITUTE(TEXT(MaintenanceEndDateFormula__c), &apos;-&apos;, &apos;/&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenancePeriod__c</fullName>
        <formula>TEXT(MaintenanceEndDateFormula__c - MaintenanceStartDateFormula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceRenewalMonth__c</fullName>
        <formula>LPAD(TEXT(YEAR(MaintenanceEndDateFormula__c)), 4, &apos;0&apos;) + LPAD(TEXT(MONTH(MaintenanceEndDateFormula__c)), 2, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>更新月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceStartDateFormula__c</fullName>
        <formula>Datevalue(MaintenanceStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaintenanceStartDate__c</fullName>
        <label>保守契約開始日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MaintenanceType__c</fullName>
        <label>保守種類</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelPI__c</fullName>
        <formula>UnitBodyLink__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiYearContractsDiv__c</fullName>
        <label>多年度契約区分</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NegotiationNo__c</fullName>
        <label>商談番号</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetMaintenance__c</fullName>
        <label>NET保守区分</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetOrderAmount__c</fullName>
        <label>受注金額(NET)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewUpdated__c</fullName>
        <label>新規／更新</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notices1__c</fullName>
        <label>特記事項１</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notices2__c</fullName>
        <label>特記事項２</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderAmountNEQTotalAmount__c</fullName>
        <formula>OrderAmount__c  &lt;&gt;  TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>オーダ額≠合計金額</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderAmount__c</fullName>
        <label>オーダ額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderConfirmation__c</fullName>
        <label>オーダ確認</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDateFormula__c</fullName>
        <formula>Datevalue(OrderDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>オーダ日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>オーダ日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderLeaseDivision__c</fullName>
        <label>受注リース区分</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderPlanName__c</fullName>
        <formula>OrderPlanNo__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注予定商談No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderPlanNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>受注予定No</label>
        <referenceTo>OrderPlan__c</referenceTo>
        <relationshipLabel>販売オーダ</relationshipLabel>
        <relationshipName>SalesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <label>オーダ状況</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderTotalSum1__c</fullName>
        <label>受注総額(消費税を含む)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderTotalSum__c</fullName>
        <formula>OrderAmount__c + TaxAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注総額(消費税を含む)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <label>オーダ種別</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderYear__c</fullName>
        <label>受注年度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrdersMemp__c</fullName>
        <label>受注メモ</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other1__c</fullName>
        <label>その他１</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other2__c</fullName>
        <label>その他２</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherCoOrderAmount__c</fullName>
        <label>受注金額(他社)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OurPaperDivision__c</fullName>
        <label>当社用紙区分</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutsideLoanEndDateFormula__c</fullName>
        <formula>Datevalue(OutsideLoanEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注社外貸与終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OutsideLoanEndDate__c</fullName>
        <label>受注社外貸与終了日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutsideLoanStartDateFormula__c</fullName>
        <formula>Datevalue(OutsideLoanStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注社外貸与開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OutsideLoanStartDate__c</fullName>
        <label>受注社外貸与開始日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PackOrderAmount__c</fullName>
        <label>受注パック口銭金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaperDivision__c</fullName>
        <label>指定用紙区分</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentProductCode__c</fullName>
        <label>親商品コード</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsCommission__c</fullName>
        <label>部品口銭</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlanningDeliveryTimeFormula__c</fullName>
        <formula>Datevalue(PlanningDeliveryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanningDeliveryTime__c</fullName>
        <label>計画納期（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotationInformation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>見積書</label>
        <referenceTo>QuotationInformation__c</referenceTo>
        <relationshipLabel>販売オーダ</relationshipLabel>
        <relationshipName>SalesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <label>見積書</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteNo_BranchNo__c</fullName>
        <formula>Quote__r.QuoteNo_BranchNo_Sync__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積No/枝番</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteNo__c</fullName>
        <formula>Quote__r.Name</formula>
        <label>見積No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>見積</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>販売オーダ</relationshipLabel>
        <relationshipName>SalesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceOrderNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>関連製造依頼No.</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>販売オーダ</relationshipLabel>
        <relationshipName>ReferenceOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelevanceProductionNo__c</fullName>
        <label>関連製造依頼番号</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepairParts__c</fullName>
        <label>修理部品</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReturnedGoodsReason__c</fullName>
        <label>返品理由</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoutineCheck__c</fullName>
        <label>定期点検(回数)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rute__c</fullName>
        <label>経路</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAccountCode__c</fullName>
        <formula>SalesAccount__r.Code__c</formula>
        <label>販売先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAccountCountry__c</fullName>
        <formula>SalesAccount__r.Country__c</formula>
        <label>販売先 国</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAccountName__c</fullName>
        <formula>SalesAccount__r.Name</formula>
        <label>販売先名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>販売オーダ (販売先取引先)</relationshipLabel>
        <relationshipName>SalesAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesAddress__c</fullName>
        <formula>SalesAccount__r.Address__c</formula>
        <label>販売先住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesContactFacultyOffice__c</fullName>
        <formula>SalesAccount__r.Undergraduate__c</formula>
        <label>販売先学部・事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesContactFax__c</fullName>
        <label>販売先担当者FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesContactPosition__c</fullName>
        <label>販売先担当者所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesContactPost__c</fullName>
        <label>販売先担当者役職</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesContactTel__c</fullName>
        <label>販売先担当者TEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesNoOfTimes__c</fullName>
        <label>売上回数</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOffice__c</fullName>
        <label>販売オフィス</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderNo_Sync__c</fullName>
        <externalId>true</externalId>
        <label>販売オーダNo_連携用</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesOrderTypeCode__c</fullName>
        <label>販売オーダタイプコード</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderType__c</fullName>
        <label>販売オーダタイプ</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPipelineLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業パイプライン(新)</label>
        <referenceTo>SalesPipeline__c</referenceTo>
        <relationshipLabel>販売オーダ</relationshipLabel>
        <relationshipName>SalesOrder_SalesPipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesStaffCode__c</fullName>
        <label>営業担当コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesStaffLkup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesOrder_SalesStaff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesStaff__c</fullName>
        <label>営業担当名</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTantoshya__c</fullName>
        <label>販売先担当者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SampleReceiptDateFormula__c</fullName>
        <formula>Datevalue(SampleReceiptDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>サンプル受領日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SampleReceiptDate__c</fullName>
        <label>サンプル受領日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SchedulingDivision__c</fullName>
        <label>分納区分</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeishikiShoriDateFormula__c</fullName>
        <formula>Datevalue(SeishikiShoriDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>正式契約処理日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SeishikiShoriDate__c</fullName>
        <label>正式契約処理日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SerialNoItemLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>シリアル番号付品目</label>
        <referenceTo>SerialNoProductItem__c</referenceTo>
        <relationshipLabel>販売オーダ</relationshipLabel>
        <relationshipName>SerialNoItemLink</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>シリアル番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeriesFormula_old__c</fullName>
        <formula>SerialNoItemLink__r.SeriesPI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>系列（装置）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>系列（装置）</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAmount__c</fullName>
        <label>サービス金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceCommission__c</fullName>
        <label>役務口銭</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettingSituationDateFormula__c</fullName>
        <formula>Datevalue(SettingSituationDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>設置室状況日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SettingSituationDate__c</fullName>
        <label>設置室状況日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SettingSituationDivision__c</fullName>
        <label>設置室状況区分</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShareOrderAmount__c</fullName>
        <label>受注商社取分金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountCode__c</fullName>
        <formula>ShipmentAccount__r.Code__c</formula>
        <label>出荷先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountCountry__c</fullName>
        <formula>ShipmentAccount__r.Country__c</formula>
        <label>出荷先 国</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountName__c</fullName>
        <formula>ShipmentAccount__r.Name</formula>
        <label>出荷先名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出荷先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>販売オーダ (出荷先取引先)</relationshipLabel>
        <relationshipName>ShipmentAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentAddress__c</fullName>
        <formula>ShipmentAccount__r.Address__c</formula>
        <label>出荷先住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentContactPosition__c</fullName>
        <label>出荷先担当者所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentContactPost__c</fullName>
        <label>出荷先担当者役職</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentContact_Fax__c</fullName>
        <label>出荷先担当者FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentContact_Tel__c</fullName>
        <label>出荷先担当者TEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentFacultyOffice__c</fullName>
        <formula>ShipmentAccount__r.Undergraduate__c</formula>
        <label>出荷先学部・事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentTantosha__c</fullName>
        <label>出荷先担当者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SundeosameBody__c</fullName>
        <label>既納本体工番/既納本体号機</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TakeOffPriceDiscount__c</fullName>
        <label>引取価格値引率(自社)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TakeOffTotalPriceSum__c</fullName>
        <label>受注引取価格合計（自社）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxAmount1__c</fullName>
        <label>税額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxAmount__c</fullName>
        <label>税額</label>
        <summarizedField>SalesOrderLine__c.Zegaku__c</summarizedField>
        <summaryForeignKey>SalesOrderLine__c.SalesOrderLink__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TaxRateSum__c</fullName>
        <label>消費税額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>合計金額</label>
        <summarizedField>SalesOrderLine__c.Amount__c</summarizedField>
        <summaryForeignKey>SalesOrderLine__c.SalesOrderLink__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalPriceSum__c</fullName>
        <label>定価総額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TradingCompanyInvolved__c</fullName>
        <label>受注商社関与区分</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPeriodYes__c</fullName>
        <label>試用期間有</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPeriod__c</fullName>
        <label>試用期間(日数)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Troubleshooting__c</fullName>
        <label>故障修理</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UndecidedOrderAmount__c</fullName>
        <label>受注金額（仕様未定）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitBodyLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>販売オーダ</relationshipLabel>
        <relationshipName>SalesOrder</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>